# captainfunction

./: MANIFEST.in  README.md  pyproject.toml  setup.py
captainfunction/: dynamic_loader.py
captainfunction/functions/: function_saver.py  list_directory_files.py  serpdev_search.py  serprdev_search.py  web_content_scraper.py  web_search.py
